--- a/public/index.html
+++ b/public/index.html
@@ -10,25 +10,30 @@
 
   <button class="menu-toggle" onclick="toggleMenu()">⚙️</button>
   <div class="menu-panel" id="menuPanel">
-    <label><input type="checkbox" checked onchange="toggleSection('time')"/> Time (OSC)</label>
+    <label><input type="checkbox" onchange="toggleSection('time')"/> Time (OSC)</label>
     <label><input type="checkbox" checked onchange="toggleSection('stopwatch')"/> Time (server)</label>
-    <label><input type="checkbox" checked onchange="toggleSection('metronome')"/> Metronome</label>
-    <label><input type="checkbox" checked onchange="toggleSection('measure')"/> Measure</label>
+    <label><input type="checkbox" onchange="toggleSection('metronome')"/> Metronome</label>
+    <label><input type="checkbox" onchange="toggleSection('measure')"/> Measure</label>
     <label><input type="checkbox" id="audioToggle" onchange="toggleAudio()"/> Audio</label>
+    <div style="display: flex; gap: 1rem; align-items: center;">
+      <span>Dimensione:</span>
+      <button onclick="changeSize(1)" style="font-size:1.5rem;">＋</button>
+      <button onclick="changeSize(-1)" style="font-size:1.5rem;">－</button>
+    </div>
   </div>
 
   <div class="content">
-    <div class="time" id="timeSection">
+    <div class="time" id="timeSection" style="display: none;">
       <p>Time:</p>
-      <h1 id="time" style="font-size: 10vh">0:00</h1>
+      <h1 id="time">0:00</h1>
     </div>
 
     <div class="stopwatch" id="stopwatchSection">
       <p>Stopwatch:</p>
-      <h1 id="stopwatch" style="font-size: 10vh">0:00</h1>
+      <h1 id="stopwatch" >0:00</h1>
     </div>
 
-    <div class="metronome" id="metronomeSection">
+    <div class="metronome" id="metronomeSection" style="display: none;">
       <p>Metronome:</p>
       <div class="container">
         <div id="circle1" class="circle"></div>
@@ -36,7 +41,7 @@
       </div>
     </div>
 
-    <div class="measure" id="measureSection">
+    <div class="measure" id="measureSection" style="display: none;">
       <p>Measures:</p>
       <h1 id="measure" style="font-size: 10vh;">0</h1>
     </div>
